fix+test: DastAnalyzer NPE on unreachable target, HttpServer stub tests for Dast/Api
fix: Map.of(null) NPE made Target-Unreachable path throw 500 (2 spots, singletonMap+String.valueOf). test: DastAnalyzerHttpTest + ApiAnalyzerHttpTest (JDK HttpServer stubs, 10 tests) - Dast 1->85.7%, Api 0->92.4%, DastPlugin 35->94%, ApiPlugin 34->90%.